# prmsoe-fast-api

prmsoe-fast-api/: app.py  pyproject.toml  test_endpoints.py
prmsoe/prmsoe-fast-api/: .gitignore  CLAUDE.md  Connections.csv  app.py  main.py  test.csv
prmsoe/prmsoe-fast-api/supabase/: config.toml
prmsoe/prmsoe-fast-api/supabase/migrations/: 20260206200202_init_schema.sql  20260207030000_draft_lab_new_contacts_retry.sql  20260207040000_draft_lab_mert_umar.sql  20260207050000_demo_bedir_aygun.sql  20260207060000_demo_bedir_outreach.sql
